<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Palavrizar</string>
    <string name="actionbar_register_title">Criar conta</string>
    <string name="registering_loading">Registrando…</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar senha</string>
    <string name="prompt_fullname">Nome Completo</string>
    <string name="prompt_location">Localização</string>
    <string name="prompt_login">Entrar</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="prompt_login_facebook">Login Facebook</string>
    <string name="prompt_login_gmail">Login Google</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Precisamos de sua localização para permitir seu cadastro no sistema."</string>
    <string name="register_now_btn">Registrar</string>
    <string name="register_fail">Falha ao registrar no sistema, verifique sua conexão</string>
    <string name="register_failed_email_already">Falha ao registrar no sistema, e-mail já cadastrado em nosso sistema</string>
    <string name="not_registered_yet">Ainda não é cadastrado? <u>Cadastre-se aqui</u></string>
    <string name="fill_all_fields">Por favor, preencha todos os campos</string>
    <string name="pwd_not_match">Senha e confirmação não conferem</string>
    <string name="register_error">Ocorreu um erro ao registrar, contate-nos</string>
    <string name="facebook_app_id">316074488998586</string>
    <string name="fb_login_protocol_scheme">fb316074488998586</string>
    <string name="facebook_fail_login">Erro ao logar com facebook, tente novamente</string>
    <string name="google_fail_login">Erro ao logar com google, tente novamente</string>
    <string name="error_title">Erro</string>
    <string name="email_fail_login_text">Login e/ou senha incorretos, tente novamente</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="ok">OK</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="sign_in_with">Login com</string>
    <string name="or">OU</string>
    <string name="alert_gplay_title">Erro</string>
    <string name="alert_gplay_text">A Google Play pode estar desatualizada, faça uma atualização para logar no sistema</string>
    <string name="alert_gplay_btn_accept">Ok</string>
    <string name="card_title_plan">Meu Plano</string>
    <string name="card_see_more_plans">Veja mais planos ></string>
    <string name="salute_you">Olá, %s</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="card_store">Loja</string>
    <string name="free_plan_title">Plano Free</string>
    <string name="free_plan_text">Este plano te da direito a ver até 10 aulas e enviar apenas 2 redações</string>
    <string name="basic_plan_title">Plano Básico</string>
    <string name="basic_plan_text">Veja até 3 aulas por dia e envie até 2 redações por mês</string>
    <string name="advanced_plan_title">Plano Avançado</string>
    <string name="advanced_plan_text">Utilize toda a nossa plataforma sem limite de acesso</string>
    <string name="btn_update">Atualizar Plano</string>
    <string name="btn_update_plan">Gerenciar Plano</string>
    <string name="card_title_themes">Temas</string>
    <string name="card_text_themes">Explore os temas disponíveis</string>
    <string name="card_see_more_themes">Ver temas ></string>
    <string name="card_title_aulas">Aulas</string>
    <string name="card_text_aulas">Assista aqui nossas aulas de diversos temas</string>
    <string name="card_see_more_aulas">Ver aulas ></string>
    <string name="questions_label">Perguntas (%d)</string>
    <string name="ask_a_question">Fazer uma pergunta</string>
    <string name="reply_a_question">Escreva sua reposta!</string>
    <string name="card_title_essay_list">Corrigir Redações</string>
    <string name="card_text_essay_list">Envie um feedback para os alunos</string>
    <string name="card_see_more_essay_list">Corrigir</string>
    <string name="author" tools:ignore="Typos">Autor: %s</string>
    <string name="post_date">Enviada em: %s</string>
    <string name="card_title_create_essay_theme">Criar Tema</string>
    <string name="edit_essay_theme">Editar Tema</string>
    <string name="card_text_create_essay">Crie um tema de redação para os alunos</string>
    <string name="card_see_more_create_essay">Criar ></string>
    <string name="create_theme_label">Criar Tema</string>
    <string name="choose_theme_label">Escolha um tema</string>
    <string name="create_theme_title">Título</string>
    <string name="pdf_attachment">Anexar Pdf</string>
    <string name="create_theme_create_option">Criar</string>
    <string name="create_theme_edit_option">Editar</string>
    <string name="create_theme_cancel_option">Cancelar</string>
    <string name="delete">Excluir</string>
    <string name="card_title_essay">Minhas Redações</string>
    <string name="card_text_essay">Veja e envie suas redações para corrigirmos</string>
    <string name="card_see_more_essay">Enviar redação ></string>
    <string name="is_readable">Você consegue ler essa redação?</string>
    <string name="positive_answer">Sim</string>
    <string name="negative_answer">Não</string>
    <string name="hint_essay_title">Título</string>
    <string name="essay_title_field">Informe o título da redação</string>
    <string name="essay_send">Enviar</string>
    <string name="upload_essay_title">Oops</string>
    <string name="upload_essay_error">Erro ao enviar sua redação, tente novamente mais tarde</string>
    <string name="upload_essay_error_2">Erro ao descontar seus créditos, comunique nosso administrador</string>
    <string name="upload_essay_success">Sucesso! Nossos professores irão corrigir sua redação em breve</string>
    <string name="upload_status_waiting">Aguardando Correção</string>
    <string name="upload_status_correcting">Correção em andamento</string>
    <string name="upload_status_not_readable">Foto Ilegível</string>
    <string name="upload_status_done">Ver correção</string>
    <string name="btn_send_essay">Enviar Redação</string>
    <string name="essay_title">Título</string>
    <string name="essay_theme">Tema</string>
    <string name="essay_status">Status</string>
    <string name="essay_action">Ação</string>
    <string name="user_not_found">Usuário não encontrado</string>
    <string name="loading_essay">Carregando redação…</string>
    <string name="btn_correct_this_essay">Corrigir</string>
    <string name="btn_issue_essay">Relatar Problema</string>
    <string name="tv_theme_placeholder">Tema: %s</string>
    <string name="dialog_confirmation_correct_title">Confirmação</string>
    <string name="dialog_confirmation_correct_content">A redação está totalmente legível?</string>
    <string name="dialog_essay_feedback_already_taken_title">Oops</string>
    <string name="dialog_essay_feedback_already_taken_content">Parece que alguém já pegou essa redação para corrigir</string>
    <string name="btn_correct_in_progress">Correção em Andamento</string>
    <string name="tv_hint_feedback">Escreva seu feedback!</string>
    <string name="upload_video_feedback">Anexar vídeo</string>
    <string name="upload_video_feedback_again">Anexar novamente</string>
    <string name="btn_send_feedback">Enviar</string>
    <string name="btn_send_feedback_again">Reenviar</string>
    <string name="open_pdf_theme">Abrir tema</string>
    <string name="folder_reports">Palavrizapp/Temas</string>
    <string name="progress_sending_comment_text">Enviando…</string>
    <string name="comment_time_now">Agora</string>
    <string name="comment_time_minutes">%dm</string>
    <string name="comment_time_hours">%h</string>
    <string name="comment_time_days">%dd</string>
    <string name="comment_time_months">%dm</string>
    <string name="comment_time_years">%da</string>
    <string name="toolbar_admin">Administrador</string>
    <string name="tab_user">Usuários</string>
    <string name="tab_plans">Loja</string>
    <string name="tab_themes">Temas</string>
    <string name="tab_videos">Videos</string>
    <string name="sucess_edit_user_title">Sucesso</string>
    <string name="sucess_edit_user_text">Usuário editado com sucesso</string>
    <string name="user_type_label">Tipo: %s</string>
    <string name="btn_save">Salvar</string>
    <string name="dialog_delete_user_title">Excluir usuário</string>
    <string name="dialog_delete_user_text">Você tem certeza que deseja excluir esse usuário?</string>
    <string name="dialog_delete_theme_title">Excluir Tema</string>
    <string name="dialog_delete_theme_text">Você tem certeza que deseja excluir esse tema?</string>
    <string name="register_date_label">Registrado em: %s</string>
    <string name="course_theme">Primeira Aula</string>
    <string name="course_title">Utilizando nosso aplicativo</string>
    <string name="course_content">Apresentação de como utilizar devidamente nosso aplicativo, veja os detalhes de todas suas funções. </string>
    <string name="next">Próximo</string>
    <string name="start">Começar</string>
    <string name="intro_screen_title_1">Olá %s</string>
    <string name="intro_screen_text_1">Seja bem-vindo ao Palavrizapp, nova plataforma de ensino</string>
    <string name="intro_screen_title_2">Assista a Aulas</string>
    <string name="intro_screen_text_2">Veja aulas de Português e redação sobre os mais variados temas</string>
    <string name="intro_screen_title_3">Faça redações</string>
    <string name="intro_screen_text_3">Desenvolva sua redação e envie-nos uma foto para corrigirmos pra você</string>
    <string name="intro_screen_title_4">Receba o Feedback</string>
    <string name="intro_screen_text_4">Sua redação será corrigida e analisada por nossos profissionais</string>
    <string name="first_class_onboard_title">Começe agora</string>
    <string name="first_class_onboard_text">Assista sua primeira aula grátis</string>
    <string name="video_introducao">VÍDEO INTRODUTÓRIO</string>
    <string name="no_essay_yet">Você ainda não enviou uma redação para corrigirmos</string>
    <string name="btn_first_send">Envie sua primeira redação</string>
    <string name="title">Minhas redações</string>
    <string name="problem_essay">Deseja </string>
    <string name="btn_concluir">Concluir</string>
    <string name="actionbar_classroom_title">Sala de Aula</string>
    <string name="first_class_title">Aula 01 - Bem-vindo ao Palavrizapp</string>
    <string name="first_class_subtitle">Conheça nossa plataforma de ensino</string>
    <string name="first_class_description">Esse vídeo ensina como utilizar devidamente nosso aplicativo, vea os detalhes de todas suas funções. </string>
    <string name="view_replies"><u>Mais respostas (%d)</u></string>
    <string name="reply"><u>Responder</u></string>
    <string name="add_video">Adicionar vídeo</string>
    <string name="video_title">Título do vídeo</string>
    <string name="video_description">Descrição</string>
    <string name="video_category">Categoria</string>
    <string name="video_size_title">%d/50</string>
    <string name="video_size_desc">%d/200</string>
    <string name="delete_video_dialog_text">Deseja excluir esse vídeo do aplicativo?</string>
    <string name="seen_already">Já visto</string>
    <string name="upload_service_description">Serviço de upload de vídeos para o Palavrizapp</string>
    <string name="btn_upload">Upload</string>
    <string name="logout">Sair</string>
    <string name="local_limit_menu">Limitar Localização</string>
</resources>