<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".modules.register.RegisterActivity">


        <EditText
            android:id="@+id/et_fullname"
            android:layout_marginTop="32dp"
            style="@style/LoginForm"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/prompt_fullname" />


        <EditText
            android:id="@+id/et_email"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/et_fullname"
            style="@style/LoginForm"
            android:hint="@string/prompt_email" />


        <EditText
            android:id="@+id/et_password"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/LoginForm"
            android:layout_below="@id/et_email"
            android:inputType="textPassword"
            android:hint="@string/prompt_password" />


    <TextView
        android:id="@+id/register_now"
        style="@style/BtnUpdatePlan"
        android:text="@string/register_now_btn"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>