<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.semear.tec.palavrizapp.modules.essay.MyEssayActivity">


    <include layout="@layout/layout_no_essay"/>

    <LinearLayout
        android:id="@+id/layout_my_essays"
        android:layout_above="@id/btn_send_essay"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_my_essays"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/card_title_essay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/table_essay_header"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/tv_essay_title"
                android:text="@string/essay_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="40"/>

            <TextView
                android:id="@+id/tv_essay_theme"
                android:text="@string/essay_theme"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:maxLines="3"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="20"/>

            <TextView
                android:text="@string/essay_status"
                android:id="@+id/tv_essay_status"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"/>

            <TextView

                android:textSize="16sp"
                android:text="@string/essay_action"
                android:textStyle="bold"
                android:id="@+id/iv_essay_action"
                android:layout_width="0dp"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_weight="15"/>
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar_loading"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_my_essays"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>



    </LinearLayout>


    <TextView
        android:id="@+id/btn_send_essay"
        android:text="@string/btn_send_essay"
        android:visibility="visible"
        android:enabled="true"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/titillium_regular"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/background_white_purple_stripe"/>



</RelativeLayout>
