<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="150dp" />


        <TextView
            android:text="@string/course_theme"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/course_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/course_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/next_lesson"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Próxima Aula" />

    </LinearLayout>



</android.support.v7.widget.CardView>